kube-manifests/stremio/mfproxy-gluetun-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediaflow-proxy
  name: mediaflow-proxy
  namespace: stremio
  uid: 9b9fca78-a64c-4eee-9236-e2cc71d4b3be
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mediaflow-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mediaflow-proxy
    spec:
      containers:
      - name: gluetun-vpn
        image: qmcgaw/gluetun
        imagePullPolicy: Always
        ports:
        - containerPort: 7777
          protocol: TCP        
        securityContext:
         privileged: true
         capabilities:
           add:
           - NET_ADMIN
      - name: mediaflow-proxy
        image: mhdzumair/mediaflow-proxy
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
