kube-manifests/stremio/trakt-auth-deploy.yaml

apiVersion: v1
kind: Deployment
metadata:
  name: trakt-auth
  namespace: stremio
  labels:
    app: trakt-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trakt-auth
  template:
    metadata:
      labels:
        app: trakt-auth
    spec:
      containers:
      - name: trakt-auth
        image: adriangl/trakt-auth:latest
      restartPolicy: Always
