kube-manifests/stremio/gluetun-deploy.yaml
# ---------------------------
# Gluetun Deployment
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            privileged: true
          ports:
            - containerPort: 7777
          livenessProbe:
            exec:
              command: ["/gluetun-entrypoint", "healthcheck"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: stremio
spec:
  selector:
    app: gluetun
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
